# libadmin

./: .env.example  Cargo.toml  Rocket.toml
migrations/: 20230206030413_create_admins_table.sql  2023_03_05_000001_create_profiles_table.sql  2023_03_05_000003_create_categories_table.sql  2023_03_05_000004_create_books_table.sql  2023_03_05_000006_create_borrow_table.sql  2023_03_05_000011_insert_categories.sql  2023_03_05_000012_insert_books.sql  create_books_table.sql  create_borrow_table.sql  create_categories_table.sql  create_profiles_table.sql
src/: auth.rs  config.rs  custom_error.rs  lib.rs  main.rs  state.rs
src/database/: admin.rs  book.rs  borrow.rs  category.rs  mod.rs  profile.rs  profiles.rs
src/models/: admin.rs  book.rs  book_category.rs  borrow.rs  category.rs  manager.rs  mod.rs  profile.rs  user.rs
src/router/: admin.rs  auth.rs  book.rs  borrow.rs  category.rs  error_handler.rs  mod.rs  profile.rs
src/utils/: helper.rs
